# llm-Crew-AI

./: README.md
crewbot/: README.md  create_assessments.md  curate_resources.md  design_curriculum.md  test.py
crewbot/src/crewbot/: main.py
crewbot/src/crewbot/config/: tasks.yaml
crewtools/: 01_code_execution_tool.py  02_file_read_tool.py  03_csv_file_rag_search.py  04_vision_rad.py  05_exa_search.py  08_pdf_docs_rag_Search.py
crewtools/input/: sample.txt
learning-path-generator/: .gitignore  README.md  pyproject.toml
learning-path-generator/output/: create_assessments.md  curate_resources.md  design_curriculum.md
learning-path-generator/src/crewbot/: crew.py
learning-path-generator/src/crewbot/config/: agents.yaml
youblog/: README.md  delete.py  pyproject.toml
youblog/db/: chroma.sqlite3
youblog/src/youblog/: crew.py  main.py
youblog/src/youblog/config/: agents.yaml  tasks.yaml
youblog/src/youblog/tools/: custom_tool.py  yt_tool.py
