[project]
name = "youblog"
version = "0.1.0"
description = "youblog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
youblog = "youblog.main:run"
run_crew = "youblog.main:run"
train = "youblog.main:train"
replay = "youblog.main:replay"
test = "youblog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
